--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
+        android:columnWidth="100dp"
         android:numColumns="auto_fit" />
 
 </FrameLayout>
