--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#9e9e9e</color>
     <color name="colorPrimaryDark">#616161</color>
-    <color name="colorAccent">#9e9f0d</color>
+    <color name="colorAccent">#408cd9</color>
     <color name="colorText">#ffffff</color>
 </resources>
