--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,13 +1,55 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_content"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.michael.moviecake.DetailFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:anndroid="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/detail_container"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.michael.moviecake.DetailActivity">
 
-    <TextView
-        android:id="@+id/detail_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/movie_title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:background="@color/colorPrimaryDark"
+            android:elevation="2dp"
+            android:typeface="serif"
+            android:textSize="30sp"
+            android:layout_alignParentTop="true"/>
+        <ImageView
+            android:id="@+id/movie_poster_image"
+            android:layout_width="134dp"
+            android:layout_height="200dp"
+            android:elevation="2dp"
+            android:scaleType="centerCrop"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/movie_title_text"/>
+        <TextView
+            android:id="@+id/movie_release_text"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/movie_title_text"/>
+        <TextView
+            android:id="@+id/movie_vote_text"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/movie_release_text"/>
+        <TextView
+            android:id="@+id/movie_desc_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_below="@id/movie_poster_image"/>
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
